<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/harry" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/title"
                android:layout_marginBottom="16dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOne"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"/>
        <CheckBox
            android:id="@+id/questionOneCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theSun"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mercury"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venus"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earth"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jupiter"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturn"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uranus"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClickQ1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neptune"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:onClick="onClickQ1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwo"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/questionTwoCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:onClick="onClickQ2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:onClick="onClickQ2"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThree"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/questionThreeCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:onClick="onClickQ3"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:onClick="onClickQ3"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFour"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tell me anything!"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_marginLeft="24dp"
            android:inputType="text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionFive"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:id="@+id/fiveA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5one"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:onClick="onClickQ5"/>
            <RadioButton
                android:id="@+id/questionFiveCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5two"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:onClick="onClickQ5"/>
        </RadioGroup>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/submitButton"
                android:layout_margin="16dp"
                android:onClick="onClickSubmit"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
